--- a/hadoop/pom.xml
+++ b/hadoop/pom.xml
@@ -16,8 +16,14 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <hadoop.version>2.6.0-cdh5.7.0</hadoop.version>
     </properties>
-
+    <repositories>
+        <repository>
+            <id>cloudera</id>
+            <url>https://repository.cloudera.com/artifactory/cloudera-repos</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -28,6 +34,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>${hadoop.version}</version>
         </dependency>
         <!--SpringBoot Hadoop依赖-->
         <dependency>
